--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
-  "name": "vanilla-rails",
-  "private": true,
+  "name": "industrial-auth-2-api-demo",
+  "packageManager": "yarn@1.22.19",
   "dependencies": {
-    "@rails/actioncable": "^6.0.0",
-    "@rails/activestorage": "^6.0.0",
-    "@rails/ujs": "^6.0.0",
-    "@rails/webpacker": "5.2.1",
-    "turbolinks": "^5.2.0"
+    "@rails/activestorage": "^7.0.4-2",
+    "@rails/ujs": "^7.0.4-2",
+    "@rails/webpacker": "5.4.3",
+    "turbolinks": "^5.2.0",
+    "webpack": "^4.46.0"
   },
+  "license": "MIT",
   "version": "0.1.0",
   "devDependencies": {
-    "webpack-dev-server": "^3.11.2"
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3"
   }
 }
